# learning-edge-detection-operators

./: .gitignore  CMakeLists.txt  README.md  main.py  optimization_driver.py  sobel_cpp.py  sobel_models.py  sobel_torch.py  sobel_warp.py  timing.txt
cpp/: conv2d.cpp  conv2d.h  conv2d_vanilla.cpp  conv2d_vanilla.h
